add profile picture

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <h1>BSIT - 3 BLOCK 3</h1>
 
     <div class="con">
+        <div class="img-con">
+            <img src="pic.jpg" alt="">
+        </div>
         <div>
             <p>- Jascha Ligan Buo</p>
             <p>- November 11, 2002</p>
