add favorite audio and video

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
             <p>- Filipino</p>
             <p>- Single</p>
         </div>
+        <audio src="audio.mp3" controls></audio>
+        <video src="vid.mp4" controls></video>
     </div>
 </body>
 </html>
