--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <h1>College of Computer Studies</h1>
     <h1>BSIT - 3 BLOCK 3</h1>
-
+	
+    <p id="date"></p>
     <div class="con">
         <div class="img-con">
             <img src="pic.jpg" alt="">
@@ -27,5 +28,6 @@
         <audio src="audio.mp3" controls></audio>
         <video src="vid.mp4" controls></video>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
